--- a/trunk/07.SourceCode/01.MVCSkill/F01_MoneyPacificUserRole/F01_MoneyPacificUserRole/F01_MoneyPacificUserRole.csproj
+++ b/trunk/07.SourceCode/01.MVCSkill/F01_MoneyPacificUserRole/F01_MoneyPacificUserRole/F01_MoneyPacificUserRole.csproj
@@ -73,6 +73,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MoneyPacific.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\TestViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\AccountProvider.cs" />
     <Compile Include="Providers\RoleProvider.cs" />
@@ -83,6 +84,7 @@
       <DependentUpon>ASPNETDB.MDF</DependentUpon>
     </Content>
     <Content Include="Global.asax" />
+    <Content Include="Views\Account\LoadHtmlFromDB.aspx" />
     <Content Include="Views\Role\Create.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
