--- a/trunk/07.SourceCode/01.MVCSkill/F01_MoneyPacificUserRole/F01_MoneyPacificUserRole/web.config
+++ b/trunk/07.SourceCode/01.MVCSkill/F01_MoneyPacificUserRole/F01_MoneyPacificUserRole/web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!-- 
     Note: As an alternative to hand editing this file you can use the 
     web admin tool to configure settings for your application. Use
@@ -8,43 +8,45 @@
     \Windows\Microsoft.Net\Framework\v2.x\Config 
 -->
 <configuration>
-	<appSettings>
-  <add key="Money Pacific CustomerSite" value="moneypacific_CustomerSite" />
-  <add key="Web Master Site" value="web_master_site" />
- </appSettings>
-	<connectionStrings>
-		<add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" /><add name="ASPNETDBEntities" connectionString="metadata=res://*/Models.MoneyPacific.csdl|res://*/Models.MoneyPacific.ssdl|res://*/Models.MoneyPacific.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;Connect Timeout=30;User Instance=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /><add name="ASPNETDBEntities1" connectionString="metadata=res://*/Models.MoneyPacific.csdl|res://*/Models.MoneyPacific.ssdl|res://*/Models.MoneyPacific.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;User Instance=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
-	<system.web>
-		<!-- 
+  <appSettings>
+    <add key="Money Pacific CustomerSite" value="moneypacific_CustomerSite" />
+    <add key="Web Master Site" value="web_master_site" />
+  </appSettings>
+  <connectionStrings>
+    <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
+    <add name="ASPNETDBEntities" connectionString="metadata=res://*/Models.MoneyPacific.csdl|res://*/Models.MoneyPacific.ssdl|res://*/Models.MoneyPacific.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;Connect Timeout=30;User Instance=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="ASPNETDBEntities1" connectionString="metadata=res://*/Models.MoneyPacific.csdl|res://*/Models.MoneyPacific.ssdl|res://*/Models.MoneyPacific.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\ASPNETDB.MDF;Integrated Security=True;User Instance=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <system.web>
+    <!-- 
             Set compilation debug="true" to insert debugging 
             symbols into the compiled page. Because this 
             affects performance, set this value to true only 
             during development.
     -->
-  <compilation debug="true" targetFramework="4.0">
-			<assemblies>
-				<add assembly="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
-				<add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" /></assemblies>
-		</compilation>
-		<!--
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Data.Linq, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B77A5C561934E089" />
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
+    <!--
             The <authentication> section enables configuration 
             of the security authentication mode used by 
             ASP.NET to identify an incoming user. 
     -->
-		<authentication mode="Forms">
-			<forms loginUrl="~/Account/LogOn" timeout="2880" />
-		</authentication>
-    
-		<membership>
-			<providers>
-				<clear />
-				<add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" applicationName="/" />
-			</providers>
-		</membership>
-
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+    </authentication>
+    <membership>
+      <providers>
+        <clear />
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="ApplicationServices" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" passwordFormat="Hashed" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" passwordStrengthRegularExpression="" applicationName="/" />
+      </providers>
+    </membership>
     <!--<membership defaultProvider="MyMembershipProvider">
       <providers>
         <clear />
@@ -56,16 +58,13 @@
              type="MyApp.MyMembershipProvider" />
       </providers>
     </membership>-->
-
-
     <profile>
-			<providers>
-				<clear />
-				<add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="ApplicationServices" applicationName="/" />
-			</providers>
-		</profile>
-    
-		<!--<roleManager enabled="true">
+      <providers>
+        <clear />
+        <add name="AspNetSqlProfileProvider" type="System.Web.Profile.SqlProfileProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" connectionStringName="ApplicationServices" applicationName="/" />
+      </providers>
+    </profile>
+    <!--<roleManager enabled="true">
 			<providers>
 				<clear/>
         
@@ -80,17 +79,13 @@
         
 			</providers>
 		</roleManager>-->
-
     <roleManager enabled="true" defaultProvider="MoneyPacificRoleProvider">
       <providers>
         <clear />
         <add name="MoneyPacificRoleProvider" Description="Money Pacific RoleProvider" passwordFormat="Clear" applicationName="F01_MoneyPacificUserRole" type="F01_MoneyPacificUserRole.Providers.MoneyPacificRoleProvider" />
-        
       </providers>
     </roleManager>
-    
-    
-		<!--
+    <!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
             during the execution of a request. Specifically, 
@@ -102,34 +97,33 @@
             <error statusCode="404" redirect="FileNotFound.htm" />
         </customErrors>
     -->
-		<pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
-			<namespaces>
-				<add namespace="System.Web.Mvc" />
-				<add namespace="System.Web.Mvc.Ajax" />
-				<add namespace="System.Web.Mvc.Html" />
-				<add namespace="System.Web.Routing" />
-				<add namespace="System.Linq" />
-				<add namespace="System.Collections.Generic" />
-			</namespaces>
-		</pages>
-	</system.web>
-	<!-- 
+    <pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
+      <namespaces>
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Routing" />
+        <add namespace="System.Linq" />
+        <add namespace="System.Collections.Generic" />
+      </namespaces>
+    </pages>
+  </system.web>
+  <!-- 
         The system.webServer section is required for running ASP.NET AJAX under Internet
         Information Services 7.0.  It is not necessary for previous version of IIS.
   -->
-	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true">
-		</modules>
-		<handlers>
-			<remove name="UrlRoutingHandler" />
-		</handlers>
-	</system.webServer>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true"></modules>
+    <handlers>
+      <remove name="UrlRoutingHandler" />
+    </handlers>
+  </system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
